--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+
+ol,
+ul {
+  list-style: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+:root {
+  --secondary-color: rgba(255, 255, 255, 0.944);
+  --font-color: #2e2e2e;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+body {
+  letter-spacing: 0.1em;
+  justify-content: center;
+  background-color: #3d9f9f;
+  overflow: auto;
+  height: 100%;
+  color: black;
+}
+
+.top--image {
+  width: 100%;
+  max-height: 742.5px;
+  overflow:hidden;
+}
+
+.heading--image--text {
+  font-size: 4em;
+  font-weight: 700;
+  font-family: monospace;
+
+}
+
+.image--container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 725px;
+  background-image: url('/public/images/Eirik-Large.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.main-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+  max-width: 960px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 30px;
 }
